btnx ChangeLog

2008-04-05	v.0.4.9
	* Fixes combination release issue. Modifiers were released before the main
	key which caused the system to register extra main keys during release.
	* Incorporates configuration looping: btnx tries all configuration files
	until it detects a configured mouse. This means you can have multiple
	configurations with different mice and btnx will start with the one
	plugged in (good for roaming users). If many mice are plugged in, btnx
	uses the highest priority one.
	Fixes bug #200050: https://bugs.launchpad.net/btnx/+bug/200050
	* Better structure for listening to multiple device handlers.
	* Allows use of devices with only absolute x,y axis movement. Previously
	the mouse was detected according to only relative x,y setting values. Allows
	the use of touchpads.

2008-03-12	v.0.4.8
	* btnx requires libdaemon >= v.0.10.
	* Daemon functionality (PID file, output and logging, signals) handled more
	gracefully by libdaemon.
	* Refinement of ./configure script. Arguments:
	init_scripts_path = control init scripts path argument.
	config_path = path where btnx configuration files are stored.
	init_tool = set to no to disable init script registration. Otherwise,
	autodetects update-rc.d, chkconfig, and rc-update.
	output_syslog = set to yes to make btnx redirect output to syslog when
	started by the init script.

2008-03-06	v.0.4.7
	* btnx has been converted to use GNU autotools. Use ./configure before
	running make and install. See ./configure --help for additional
	arguments.
	* Compatible with btnx-config v. >= 0.4.7
	* Kernel 2.6.24 input interface changes required changes to reading
	the configuration data and reading event handlers.
	* Reads event handlers like it should have since the beginning.

2008-02-21	v.0.4.6
	* Added some more delay after modifier key press. Too short delay caused
	mouse button keycodes to be registered on some systems before modifier 
	keys. Resulted in combos not working properly.