@@ -14,7 +14,7 @@
 #define UINPUT_LOCATION	"/dev/input/uinput"
 
 
-int uinput_init(const char *dev_name);
+int uinput_init(void);
 void uinput_close(void);
 void uinput_key_press(btnx_event *bev);
 
